# dagger

./: CMakeLists.txt  README.md
include/: dagger.hpp
tests/: tests.cpp
